// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Todo  1`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "MTY=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNg==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  2`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "MTc=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNw==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "MTg=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxOA==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add Todo  4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "MTk=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxOQ==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  5`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "MjA=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoyMA==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  6`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "MjE=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoyMQ==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add User  1`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "user1",
      "id": "VXNlcjo0",
    },
  },
}
`;

exports[`Change Todo Status => false  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxNw==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxOA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxNg==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxNw==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxOA==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 3,
        "email": "user1@test.com",
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Clear Completed Todos  1`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "ClearCompletedTodos",
      "deletedTodoIds": Array [
        "VG9kbzoxNg==",
        "VG9kbzoxNw==",
        "VG9kbzoxOA==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjo0",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Mark All Todos  1`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzoxNg==",
          "text": "Get A Customer 1",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxNw==",
          "text": "Get A Customer 2",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxOA==",
          "text": "Get A Customer 3",
        },
      ],
      "clientMutationId": "MarkAllTodos",
      "user": Object {
        "completedCount": 3,
        "id": "VXNlcjo0",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Query User  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "first",
      ],
    },
  ],
}
`;

exports[`Remove User  1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "user1",
    },
  },
}
`;

exports[`RemoveTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RenameTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;
